starrs/prowlarr/resources/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: starrs
  labels:
    app: prowlarr
  name: prowlarr
spec:
  ports:
    - name: "prowlarr-9696"
      port: 9696
      protocol: TCP
      targetPort: 9696
  selector:
    app: prowlarr
