starrs/prowlarr/resources/prowlarr-gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: starrs
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
    - name: consolidated-gateway
      namespace: gateway
  hostnames:
    - prowlarr.k8s.example.com
    - prowlarr.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr
          port: 9696
